# rsplayer

./: Cargo.toml  README.md
axumdemo/: Cargo.toml
axumdemo/src/: main.rs
boxdemo/: Cargo.toml
boxdemo/src/: main.rs
clapdemo/: Cargo.toml
clapdemo/src/: main.rs
rcdemo/: Cargo.toml
rcdemo/src/: main.rs
serdedemo/: Cargo.toml
serdedemo/src/: main.rs
sqlxdemo/: Cargo.toml
sqlxdemo/migrations/: 20230121104245_test_table.sql
sqlxdemo/src/: main.rs
threaddemo/: Cargo.toml
threaddemo/src/: main.rs
