[package]
name = "axumdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1" }
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91" }