[package]
name = "sqlxdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }
tokio = { version = "1.24.2", features = ["full"] }
